fix typo: "dont" -> "don't"

--- a/www/base/src/styles/styles.less
+++ b/www/base/src/styles/styles.less
@@ -3,7 +3,7 @@
 @import "../../libs/font-awesome/less/font-awesome.less";
 @import (inline) "../../libs/guanlecoja-ui/styles.css";
 @fa-font-path: "./fonts";
-/* base css for angular, dont display anything until angular is running */
+/* base css for angular, don't display anything until angular is running */
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
 }
