--- a/www/md_base/src/styles/styles.less
+++ b/www/md_base/src/styles/styles.less
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-/* base css for angular, dont display anything until angular is running */
+/* base css for angular, don't display anything until angular is running */
 [ng-cloak] {
   display: none !important;
 }
