add a custom stylesheet example

--- a/smokes/templates/mydashboard.html
+++ b/smokes/templates/mydashboard.html
@@ -1,4 +1,10 @@
-<div class="container">
+<div class="container mydashboard">
+    <style>
+    /* only modify th from this dashboard! */
+    .mydashboard table th {
+        font-size 24pt;
+    }
+    </style>
     <!-- Create a table of builds organised by builders in columns -->
     <table class="table">
         <tr>
