--- a/www/console_view/src/module/view/change-row/changerow.tpl.jade
+++ b/www/console_view/src/module/view/change-row/changerow.tpl.jade
@@ -28,9 +28,9 @@
         .info
             i.fa.fa-link
             p
-                a(ng-href='{{ cr.change.link }}' target='_blank') {{ cr.change.revision | limitTo: 10 }}
+                a(ng-href='{{ cr.change.revlink }}' target='_blank') {{ cr.change.revision | limitTo: 10 }}
         // Changed files
         .info
             i.fa.fa-file-o
             p(ng-repeat='file in cr.change.files')
-                a(ng-href='{{ cr.createFileLink(file) }}' target='_blank') {{ file }}
+                | {{ file }}
