--- a/www/console_view/src/styles/styles.less
+++ b/www/console_view/src/styles/styles.less
@@ -1,5 +1,3 @@
-@row-header-width: 200px;
-@row-header-width-expanded: 400px;
 @column-width: 40px;
 
 .console {
@@ -30,15 +28,39 @@
         max-width: @column-width;
         width: @column-width;
     }
-
-    .builder {
-        margin-top: 100px;
-        position: relative;
-        float: left;
-        text-align: center;
-        transform: rotate(-25deg);
-        transform-origin: 0% 100%;
-        text-decoration: none;
-        white-space: nowrap;
+    table {
+        border: none;
     }
+    .tag_row{
+        td {
+            margin:0px;
+            padding:0px;
+        }
+        span {
+            position: relative;
+            float: left;
+            font-size: 10px;
+            overflow: hidden;
+            text-decoration: none;
+            white-space: nowrap;
+        }
+    }
+    tr.first-row {
+        background-color: #fff!important;
+        th {
+        border: none;
+        background-color: #fff !important;
+        }
+        .builder {
+            position: relative;
+            float: left;
+            font-size: 12px;
+            text-align: center;
+            transform: rotate(-25deg) ;
+            transform-origin: 0% 100%;
+            text-decoration: none;
+            white-space: nowrap;
+        }
+    }
+
 }
