hack to be able to see all the builder names when there are lots of builders

--- a/www/waterfall_view/src/styles/styles.less
+++ b/www/waterfall_view/src/styles/styles.less
@@ -40,6 +40,8 @@
     height: 100px;
     line-height: 100px;
     margin-bottom: 2px;
+    // @FIXME: add a bit of margin-right in order to be able to see the rotated titles.
+    margin-right: -150px;
     vertical-align: middle;
 
     .header-content {
