--- a/www/base/src/app/common/directives/changelist/changelist.tpl.jade
+++ b/www/base/src/app/common/directives/changelist/changelist.tpl.jade
@@ -15,45 +15,4 @@
     .row
         ul.list-group
             li.list-group-item(ng-repeat="change in changes")
-                span.no-select
-                    .change-avatar(ng-if="change.author_email")
-                        a(ng-href="mailto:{{change.author_email}}", title="{{change.author_name }}")
-                            img(ng-src="avatar?email={{change.author_email}}")
-                    | &nbsp;
-                    a(ng-if="change.revlink", ng-href="{{change.revlink}}")
-                        | {{ change.comments.split("\n")[0] }}
-                    span(ng-if="!change.revlink")
-                        | {{ change.comments.split("\n")[0] }}
-                    | &nbsp;
-                    i.fa.fa-chevron-circle-right.rotate(ng-class="{'fa-rotate-90':change.show_details}",
-                                                        ng-click="change.show_details=!change.show_details")
-                div.anim-changedetails(ng-show="change.show_details")
-                    table.table.table-striped.table-condensed(ng-show="change.show_details")
-                      tr(ng-if="change.category")
-                        td Category
-                        td {{ change.category }}
-                      tr
-                        td Author
-                        td {{ change.author }}
-                      tr
-                        td Date
-                        td {{ change.when_timestamp | dateformat:'LLL'}} ({{ change.when_timestamp | timeago }})
-                      tr(ng-if="change.codebase")
-                        td Codebase
-                        td {{ change.codebase }}
-                      tr
-                        td Repository
-                        td {{ change.repository }}
-                      tr
-                        td Branch
-                        td {{ change.branch }}
-                      tr
-                        td Revision
-                        td {{ change.revision }}
-
-                    h5 Comment
-                    pre {{ change.comments }}
-                    h5 Changed files
-                    ul
-                      li(ng-repeat='file in change.files') {{file}}
-                    p(ng-hide="change.files.length") No files
+                changedetails(change="change")
