--- a/www/base/src/app/common/directives/buildsummary/buildsummary.tpl.jade
+++ b/www/base/src/app/common/directives/buildsummary/buildsummary.tpl.jade
@@ -50,5 +50,6 @@
             buildrequestsummary(style="margin-left:30px;margin-top:8px",buildrequestid='buildsummary.getBuildRequestIDFromURL(url.url)')
         div.anim-stepdetails(ng-if="step.fulldisplay")
           logpreview(ng-repeat="log in step.logs", log="log",
+                     fulldisplay="step.logs.length == 1",
                      builderid="buildsummary.build.builderid", buildnumber="buildsummary.build.number",
                      step="step")
