--- a/www/base/src/app/layout.jade
+++ b/www/base/src/app/layout.jade
@@ -13,7 +13,7 @@ html.no-js(xmlns:ng='http://angularjs.org', xmlns:app='ignored', ng-app="app")
         block content
         block footer
 
-    script(src="scripts.js?_#{(new Date()).getTime()}")
+    script(src="scripts.js?_" + (new Date()).getTime())
     | {% for app in config.plugins -%}
     script(src="{{app}}/scripts.js")
     link(rel='stylesheet', href='{{app}}/styles.css')
