waterfall: remove unnecessary horizontal scrollbar
The margin hack was added in commit v0.9.5-126-ga0f742725 and results in
an ugly scrollbar which is especially noticable with a few builders.

Add padding to the right (use 100px to match the left side) and add a
tooltip to the header item in case the title falls off the page anyway.

--- a/www/waterfall_view/src/styles/styles.less
+++ b/www/waterfall_view/src/styles/styles.less
@@ -1,5 +1,7 @@
 @navbar-height: 52px;
 @main-color: #3498db;
+// Spacing to prevent rotated text from falling off the screen.
+@header-right-margin: 100px;
 
 .waterfall {
   position: absolute;
@@ -8,6 +10,7 @@
   bottom: 0;
   right: 0;
   width: auto;
+  padding-right: @header-right-margin;
   overflow-x: auto;
   overflow-y: hidden;
 
@@ -40,8 +43,7 @@
     height: 100px;
     line-height: 100px;
     margin-bottom: 2px;
-    // @FIXME: add a bit of margin-right in order to be able to see the rotated titles.
-    margin-right: -150px;
+    margin-right: -@header-right-margin;
     vertical-align: middle;
 
     .header-content {
