--- a/www/base/src/styles/styles.less
+++ b/www/base/src/styles/styles.less
@@ -133,6 +133,11 @@ Firefox will insert newlines if the selection go over a no-select span, so we ne
   }
 }
 
+.changedetails > .no-select > * {
+    margin-left: 0.3em;
+    margin-right: 0.3em;
+}
+
 li.unstyled{
   list-style: none;
 }
