grid_view: fix error when multiple buildsets for one change
When using trigger buildsteps, there can be multiple buildsets for the
same change object.

Modify the code so that builds are identified by change id.

Fixes: f098bdd5d7fb ("www: add grid_view plugin")
Signed-off-by: Robin Jarry <robin.jarry@6wind.com>

--- a/www/grid_view/src/module/grid.tpl.jade
+++ b/www/grid_view/src/module/grid.tpl.jade
@@ -30,7 +30,7 @@
                             | {{ C.tags.length }} tags
                     span(ng-show="C.tags.length > 0")
                         span.label.label-danger.clickable(ng-click="C.resetTags()", uib-tooltip="Reset tags filter") x
-                th.change(ng-repeat="ch in changes")
+                th.change(ng-repeat="ch in changes track by ch.changeid")
                     changedetails(change="ch", compact="C.compactChanges")
         tbody
             tr(ng-repeat="b in builders | orderBy: 'name'")
@@ -41,7 +41,7 @@
                     span(ng-repeat="tag in b.tags")
                         span.builder-tag.label(ng-click="C.toggleTag(tag)", ng-class="C.isTagToggled(tag) ? 'label-success': 'label-default'")
                             | {{ tag }}
-                td(ng-repeat="ch in changes")
-                    a(ng-if="b.builds[ch.bsid]", ui-sref="build({builder: b.builderid, build: b.builds[ch.bsid].number})")
-                        span.badge-status(ng-class="results2class(b.builds[ch.bsid], 'pulse')")
-                            | {{ b.builds[ch.bsid].number }}
+                td(ng-repeat="ch in changes track by ch.changeid")
+                    a(ng-if="b.builds[ch.changeid]", ui-sref="build({builder: b.builderid, build: b.builds[ch.changeid].number})")
+                        span.badge-status(ng-class="results2class(b.builds[ch.changeid], 'pulse')")
+                            | {{ b.builds[ch.changeid].number }}
