--- a/www/base/src/app/workers/workers.tpl.jade
+++ b/www/base/src/app/workers/workers.tpl.jade
@@ -5,7 +5,7 @@
                 th Masters
                 th WorkerName
                 th Recent Builds
-                th Builders
+                th(ng-if="settings.showWorkerBuilders.value") Builders
                 th(ng-repeat="info in worker_infos") {{ capitalize(info) }}
                     
             tr(ng-repeat='worker in workers | orderBy: ["-num_connections", "name"]',
@@ -25,7 +25,7 @@
                         a(ui-sref='build({builder: build.builderid, build: build.number})')
                             span.badge-status(ng-class="results2class(build, 'pulse')")
                               | {{ builders.get(build.builderid).name }}/{{ build.number }}
-                td
+                td(ng-if="settings.showWorkerBuilders.value")
                     ul.list-inline
                         li(ng-repeat='builder in getUniqueBuilders(worker) | orderBy: ["name"]')
                             a(ui-sref="builder({builder: builder.builderid})")
