grid_view: fix default values for parameters
When default values are "true", it becomes impossible to actually
configure something to "false" and have it restored when reloading the
page. "false" is considered as an undefined setting which makes the
default value "true" active.

Fix this by inverting the logic around boolean parameters.

Signed-off-by: Robin Jarry <robin.jarry@6wind.com>

--- a/www/grid_view/src/module/grid.tpl.jade
+++ b/www/grid_view/src/module/grid.tpl.jade
@@ -31,7 +31,7 @@
                     span(ng-show="C.tags.length > 0")
                         span.label.label-danger.clickable(ng-click="C.resetTags()", uib-tooltip="Reset tags filter") x
                 th.change(ng-repeat="ch in changes track by ch.changeid")
-                    changedetails(change="ch", compact="C.compactChanges")
+                    changedetails(change="ch", compact="!C.fullChanges")
         tbody
             tr(ng-repeat="b in builders | orderBy: 'name'")
                 th
