--- a/www/grid_view/src/styles/styles.less
+++ b/www/grid_view/src/styles/styles.less
@@ -25,4 +25,10 @@
         margin-left: 0.3em;
         cursor: pointer;
     }
+    .form-inline {
+        label {
+            padding-left: 0.5em;
+            padding-right: 0.5em;
+        }
+    }
 }
