grid_view: handle RETRY builds
When a build is RETRY'd (for example, because a worker has been
disconnected before it was finished), there are multiple builds for the
same build request.

Handle that special case, and display all builds for each build request.

Signed-off-by: Robin Jarry <robin.jarry@6wind.com>

--- a/www/grid_view/src/module/grid.tpl.jade
+++ b/www/grid_view/src/module/grid.tpl.jade
@@ -45,6 +45,6 @@
                         span.builder-tag.label(ng-click="C.toggleTag(tag)", ng-class="C.isTagToggled(tag) ? 'label-success': 'label-default'")
                             | {{ tag }}
                 td(ng-repeat="ch in changes track by ch.changeid")
-                    a(ng-if="b.builds[ch.changeid]", ui-sref="build({builder: b.builderid, build: b.builds[ch.changeid].number})")
-                        span.badge-status(ng-class="results2class(b.builds[ch.changeid], 'pulse')")
-                            | {{ b.builds[ch.changeid].number }}
+                    a(ng-repeat="build in b.builds[ch.changeid] | orderBy: 'buildid'", ui-sref="build({builder: b.builderid, build: build.number})")
+                        span.badge-status(ng-class="results2class(build, 'pulse')")
+                            | {{ build.number }}
