--- a/www/base/src/styles/mobile.less
+++ b/www/base/src/styles/mobile.less
@@ -10,7 +10,13 @@
         padding-left: 5px !important;
         padding-right: 5px !important;
     }
-    .nav > li > a {
+    .navbar {
+        .container, .container-fluid {
+            padding-left: 15px !important;
+            padding-right: 15px !important;
+        }
+    }
+    .nav.nav-tabs > li > a {
         padding: 5px !important;
         font-size: 12px !important;
     }
