--- a/www/base/src/app/common/directives/forcefields/verticallayout.tpl.jade
+++ b/www/base/src/app/common/directives/forcefields/verticallayout.tpl.jade
@@ -3,6 +3,6 @@
         | {{field.label}}
     .panel-body
         div.form-horizontal
-            div(ng-repeat='field in field.fields | filter:{hide:false}',
+            div(ng-repeat='cfield in field.fields | filter:{hide:false}',
                 class="{{column_class}}")
-                forcefield(field="field")
+                forcefield(field="cfield")
