--- a/www/base/src/app/layout.jade
+++ b/www/base/src/app/layout.jade
@@ -8,6 +8,7 @@ html.no-js(xmlns:ng='http://angularjs.org', xmlns:app='ignored', ng-app="app")
     meta(name='viewport', content='initial-scale=1, minimum-scale=1, user-scalable=no, maximum-scale=1, width=device-width')
     link(rel='stylesheet', href='styles.css')
     link(rel='icon', href='img/favicon.ico')
+    link(rel='fluid-icon', href='img/fluidicon.png', title="Buildbot")
 
     body(ng-cloak)
         block content
