Make sidebar pinned by default, and make it so that it does not expand on mouse-over (this is hostile to multi-monitor users who have the browser on the right).  Instead, it should expand upon clicking on it.

--- a/www/guanlecoja-ui/src/module/page_with_sidebar/page_with_sidebar.tpl.jade
+++ b/www/guanlecoja-ui/src/module/page_with_sidebar/page_with_sidebar.tpl.jade
@@ -1,5 +1,5 @@
 .gl-page-with-sidebar(ng-class="{'active': page.sidebarActive, 'pinned': page.sidebarPinned}")
-    .sidebar.sidebar-blue(ng-mouseenter='page.enterSidebar()',ng-mouseleave='page.leaveSidebar()')
+    .sidebar.sidebar-blue(ng-mouseenter='page.enterSidebar()',ng-mouseleave='page.leaveSidebar()',ng-click='page.sidebarActive=true')
         ul
             li.sidebar-main
                 a(href='javascript:')
