fix minor UI issues with worker actions

--- a/www/base/src/styles/styles.less
+++ b/www/base/src/styles/styles.less
@@ -182,3 +182,8 @@ span:hover>.mouse-over-only  {display: inline;}
         flex-grow: 4
     }
 }
+
+/* glyphicon to font awesome translation, for angular-bootstrap-multiselect */
+.glyphicon { font-family: 'FontAwesome'; }
+.glyphicon-ok:before { content: @fa-var-check; }
+.glyphicon-remove:before { content: @fa-var-times; }
