Changed waterfall's special css rule to be called `hundredpercent` at tardyp`s request, and moved into a mmore global style file so that it can be used by other dashboards. Also found that it stopped working after doing this because the `body{ height:100% }` rule only works when also using `html{height:100%}` which was also removed from the main guanlecoja-ui style.  Instead make `hundredpercent` use `height:100vh`.

--- a/www/base/src/styles/styles.less
+++ b/www/base/src/styles/styles.less
@@ -8,6 +8,19 @@
   display: none !important;
 }
 
+// Dashboards which use SVG to draw contents such as waterfall may require
+//  setting  body height to 100vh. (100% of viewport height)
+//  e.g. Waterfall uses this, otherwise the contents do not appear. 
+// The controller dynamically adds and removes this class to body
+//   when entering and leaving Waterfall.
+//
+//  (note: adding height:100vh to a div also would solve this problem 
+//   except that causes the dialogs to make the SVG disappear due to 
+//   the dialog setting the body to overflow:hidden via modal-open rule.)
+body.hundredpercent {
+  height: 100vh;
+}
+
 /* modal dialog customizations */
 @media screen {
   .modal-xlg {
