--- a/www/md_base/src/app/about/about.tpl.jade
+++ b/www/md_base/src/app/about/about.tpl.jade
@@ -1,8 +1,8 @@
 section.card(layout-md="column", layout-gt-md="row")
   div.meta(flex-gt-md="33")
-    h2 Runtime informations
+    h2 Runtime information
     p
-      | Informations, configrations and statuses about this running instance of buildbot.
+      | Information, configrations and statuses about this running instance of buildbot.
   div.content(flex-gt-md="66")
     h3 Project Info
     inspect-data(data="about.projectInfo")
@@ -31,7 +31,7 @@ section.card(layout-md="column", layout-gt-md="row")
         a(href="http://docs.buildbot.net/latest/") Documentation
       
     p
-      | Buildbot is licenced under 
+      | Buildbot is licensed under 
       b GNU Public Licence(v2)
       | .
 
