--- a/www/md_base/src/app/about/about.tpl.jade
+++ b/www/md_base/src/app/about/about.tpl.jade
@@ -2,7 +2,7 @@ section.card(layout-md="column", layout-gt-md="row")
   div.meta(flex-gt-md="33")
     h2 Runtime information
     p
-      | Information, configrations and statuses about this running instance of buildbot.
+      | Information, configurations and statuses about this running instance of buildbot.
   div.content(flex-gt-md="66")
     h3 Project Info
     inspect-data(data="about.projectInfo")
