--- a/www/base/src/app/builders/builders.tpl.jade
+++ b/www/base/src/app/builders/builders.tpl.jade
@@ -54,9 +54,11 @@
           td(style="width:20%;")
             span(data-ng-repeat="worker in builder.workers")
                 a(ui-sref='worker({worker: worker.workerid})')
-                    span.badge-status(title="{{worker.name}}" ng-class="connected2class(worker, 'pulse')")
+                    span.badge-status(title="{{worker.name}}" ng-class="connected2class(worker, 'pulse')" ng-if="!settings.show_workers_name.value")
                         .badge-inactive {{worker.workerid}}
                         .badge-active {{worker.name}}
+                    span.badge-status(title="{{worker.name}}" ng-class="connected2class(worker, 'pulse')" ng-if="settings.show_workers_name.value")
+                      | {{ worker.name }}
   .row
       .form-group
           label.checkbox-inline
