--- a/www/base/src/app/common/directives/buildsummary/buildsummary.tpl.jade
+++ b/www/base/src/app/common/directives/buildsummary/buildsummary.tpl.jade
@@ -49,7 +49,7 @@
           li(ng-if='buildsummary.isBuildRequestURL(url.url)', ng-repeat="url in step.urls")
             buildrequestsummary(style="margin-left:30px;margin-top:8px",buildrequestid='buildsummary.getBuildRequestIDFromURL(url.url)')
         div.anim-stepdetails(ng-if="step.fulldisplay")
-          logpreview(ng-repeat="log in step.logs", log="log",
-                     fulldisplay="step.logs.length == 1",
+          logpreview(ng-repeat="log in buildsummary.getLogs(step)", log="log",
+                     fulldisplay="step.logs.length == 1 || buildsummary.isSummaryLog(log)",
                      builderid="buildsummary.build.builderid", buildnumber="buildsummary.build.number",
                      step="step")
