Builder page should show worker column

--- a/www/base/src/app/common/directives/builds/buildstable.tpl.jade
+++ b/www/base/src/app/common/directives/builds/buildstable.tpl.jade
@@ -9,6 +9,7 @@
         td(width='150px') Started At
         td(width='150px') Duration
         td(width='200px') Owner
+        td(width='150px') Worker
         td Status
       tr(ng-repeat='build in builds | orderBy:"-started_at"')
           td(ng-show="builders") {{ builders.get(build.builderid).name }}
@@ -27,6 +28,9 @@
           td
             span(title="{{build.properties.owner[0]}}")
               | {{ build.properties.owner[0] }}
+          td
+            a(ui-sref='worker({worker: build.workerid})')
+              | {{build.properties.workername[0]}}
           td
             ul.list-inline
               li
