Correct pluralization in HTML template
Correct pluralization of the word "build" when there are zero builds
running.

--- a/www/base/src/app/home/home.tpl.jade
+++ b/www/base/src/app/home/home.tpl.jade
@@ -9,7 +9,7 @@
     .col-sm-12
       .well
         h2 Welcome to buildbot
-        h4 {{ buildsRunning.length }} build{{ buildsRunning.length > 1 ? 's' : '' }} running currently
+        h4 {{ buildsRunning.length }} build{{ buildsRunning.length == 1 ? '' : 's' }} running currently
         ul
           li.unstyled(ng-repeat="build in buildsRunning | filter:complete:false")
             buildsticker(build="build")
